<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     android:background="#FFFFFF"> 
    
    <RelativeLayout

        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2B65EC"
        android:textSize="60sp" 
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/headerLabel"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:gravity="center" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:gravity="center"
        android:text="@string/bmi"
        android:textColor="#0000A0"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightLabel"
        android:textColor="#25383C"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightLabel"
         android:textColor="#25383C"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/heightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="calculateClickHandler"
        android:text="@string/calculateButton" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:text="@string/empty"
         android:textColor="#25383C"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Footer aligned to bottom -->

    <RelativeLayout

        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#98AFC7"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/footerLabel" 
            android:textColor="#000"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>